[package]
name = "hasurustbot"
version = "0.2.0"
authors = ["khonoka <kagiyamahonoka@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5.0", features = ["macros","auto-send"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.7"
lazy_static = "1.4.0"
rand = "0.8.4"
base64 = "0.13.0"